
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 scalar_t__ CMD_LOCAL ;
 char* command ;
 scalar_t__ command_type ;
 int dup2 (int,int) ;
 int execl (char*,char*,int *) ;
 int exit (int) ;
 int read (int,char*,int) ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void do_command(int fd)
{
        char buffer[1024];
        int len;

        if (command_type == CMD_LOCAL) {
                dup2(fd, 0);
                dup2(fd, 1);
                dup2(fd, 2);
                execl(command, command, ((void*)0));
                exit (2);
        }
        write(fd, command, strlen(command));
        write(fd, "\n", 1);
        while ((len = read(fd, buffer, sizeof(buffer))) > 0) {
                write(1, buffer, len);
        }
        exit (0);
}
